Add SDK surface and agent loop; keep step order stable
DESIGN.md §26.4: the three SDK verbs — execute() runs a named workflow,
process() resolves intent first, stream() observes the same execution.
process() selects a workflow, it does not run one; stream() is not a third
execution model. Also records that execute()'s wait belongs to the caller's
thread, never to a runtime thread.

DESIGN.md §9.9: an agent loop is a step, not a mode of the engine. The
model picks which of the step's declared capabilities to call; the workflow
decides that the step runs, what it may reach, when it must stop
(maxIterations is mandatory) and what happens next. Every iteration is a
step-history entry.

Fix WorkflowDefinition.stepsById() returning steps in unspecified order:
Map.copyOf does not preserve iteration order and varies per JVM, so the
ordering test passed on one run and failed on the next.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>